<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddPublication"
    tools:showIn="@layout/activity_add_publication">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:id="@+id/textName"
        android:layout_below="@+id/textEnterPublicationDetails"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editName"
        android:layout_below="@+id/textName"
        android:layout_alignLeft="@+id/editURL"
        android:layout_alignStart="@+id/editURL" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/url"
        android:id="@+id/textURL"
        android:layout_below="@+id/editName"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editURL"
        android:layout_below="@+id/textURL"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textDueDate"
        android:text="@string/due_date"
        android:layout_below="@+id/editURL"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editDueDate"
        android:layout_below="@+id/textDueDate"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_publication_details"
        android:id="@+id/textEnterPublicationDetails"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_question"
        android:id="@+id/checkBoxComplete"
        android:checked="false"
        android:layout_below="@+id/editDueDate"
        android:layout_toLeftOf="@+id/textName"
        android:layout_toStartOf="@+id/textName" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active"
        android:id="@+id/checkBoxActive"
        android:layout_above="@+id/textProgress"
        android:layout_toRightOf="@+id/textURL"
        android:layout_toEndOf="@+id/textURL"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/progress"
        android:id="@+id/textProgress"
        android:layout_below="@+id/checkBoxComplete"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp" />

    <SeekBar
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarProgress"
        android:layout_below="@+id/textProgress"
        android:layout_centerHorizontal="true"
        android:max="100"
        android:indeterminate="false"
        android:progress="0"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textProgressAmount"
        android:layout_alignTop="@+id/seekBarProgress"
        android:layout_toRightOf="@+id/seekBarProgress"
        android:layout_toEndOf="@+id/seekBarProgress" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/buttonSubmit"
        android:layout_below="@+id/seekBarProgress"
        android:layout_centerHorizontal="true"
        android:onClick="submitPublication"/>

</RelativeLayout>
